Fix z-index on navigation
- Added z-index 1 to make it possible for bootstrap components override corporate-ui z-index

--- a/src/styles/elements/c-navigation.scss
+++ b/src/styles/elements/c-navigation.scss
@@ -33,7 +33,7 @@
   font-weight: bold;
   text-transform: uppercase;
   background-color: #fff;
-  z-index: 2000;
+  z-index: 1;
 }
 :host([slot=sub]) {
   background-color: #fff;
